@@ -7,7 +7,14 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>MavenCucmber</name>
 	<url>http://maven.apache.org</url>
-
+    
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://repo1.maven.org/maven2</url>
+        </repository>
+    </repositories>
+    
 	<properties>
 		<cucumber.version>1.2.4</cucumber.version>
 		<junit.version>1.2.4</junit.version>
@@ -17,26 +24,37 @@
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-java</artifactId>
-			<version>$(cucumber.version)</version>
+			<version>1.2.4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-junit</artifactId>
-			<version>$(junit.version)</version>
+			<version>1.2.4</version>
 			<scope>test</scope>
 		</dependency>
+        <!--
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency> -->
 	</dependencies>
 	
-	<build>
+    <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-					
-                </configuration>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.12.2</version>
+            <configuration>
+                <argLine>-Duser.language=en</argLine>
+                <argLine>-Xmx1024m</argLine>
+                <argLine>-XX:MaxPermSize=256m</argLine>
+                <argLine>-Dfile.encoding=UTF-8</argLine>
+                <useFile>false</useFile>
+            </configuration>
             </plugin>
         </plugins>
     </build>
